# sc_var

./: LICENSE  README.md  pyproject.toml
Vignettes/: scATAC_pipline.ipynb  scMulti_Omics_pipline.ipynb
sc_var/: method.py
